--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <!-- CSS -->
-<link href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css" media="screen">
 
 <div class="dots">
     <div></div>
